--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body { margin:0; font-family:sans-serif; background:#111; color:#eee; }
     .split { display:flex; height:100vh; }
-    .half { flex:1; background:url('Santa.png') center/cover no-repeat; }
+    .half { flex:1; background:url('https://searchenginesearchmas.github.io/Searchmas/Santa.png') center/cover no-repeat; }
     .card { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
     h1 { margin:0 0 12px; text-align:center; }
     .searchbar { display:flex; gap:10px; margin-bottom:20px; }
