--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -20,7 +20,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
+      padding-top: 50px;
       color: white;
       font-family: Arial, sans-serif;
     }
@@ -58,7 +59,7 @@
   <!-- Left half: pure Santa background -->
   <div class="half"></div>
 
-  <!-- Right half: Santa background + search box -->
+  <!-- Right half: Santa background + search UI -->
   <div class="half">
     <div class="content">
       <input id="query" type="text" placeholder="Search here...">
@@ -70,6 +71,7 @@
   <script>
     async function searchImages() {
       const query = document.getElementById('query').value;
+      if (!query) return; // keep box visible even if empty
       const response = await fetch(`https://api.unsplash.com/search/photos?query=${query}&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
       const data = await response.json();
       const imagesDiv = document.getElementById('images');
