--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -47,6 +47,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      min-height: 200px; /* ensures space is always there */
     }
     #images img {
       margin: 10px;
@@ -64,18 +65,18 @@
     <div class="content">
       <input id="query" type="text" placeholder="Search here...">
       <button onclick="searchImages()">Search</button>
-      <div id="images"></div>
+      <div id="images"><p>Results will appear here…</p></div>
     </div>
   </div>
 
   <script>
     async function searchImages() {
       const query = document.getElementById('query').value;
-      if (!query) return; // keep box visible even if empty
+      if (!query) return;
       const response = await fetch(`https://api.unsplash.com/search/photos?query=${query}&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
       const data = await response.json();
       const imagesDiv = document.getElementById('images');
-      imagesDiv.innerHTML = '';
+      imagesDiv.innerHTML = ''; // clear placeholder but keep box above
       data.results.forEach(photo => {
         const img = document.createElement('img');
         img.src = photo.urls.small;
