--- a/index.html
+++ b/index.html
@@ -2,96 +2,70 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Searchmas Engine</title>
+  <title>Searchmas Split</title>
   <style>
     body {
       margin: 0;
       height: 100vh;
-      background: url('https://searchenginesearchmas.github.io/Searchmas/Santa.png')
-                  no-repeat center center fixed;
-      background-size: cover;
+      display: flex;
       font-family: Arial, sans-serif;
-      color: white;
+    }
+    .half {
+      width: 50%;
+      height: 100vh;
+      background: url('https://searchenginesearchmas.github.io/Searchmas/Santa.png')
+                  no-repeat center center;
+      background-size: cover;
+    }
+    .content {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       text-align: center;
     }
-    .centered {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-    #resultsView {
-      display: none;
-      margin-top: 50px;
+    nav {
+      margin-top: 20px;
     }
     nav a {
-      margin: 0 15px;
-      color: white;
+      padding: 10px 20px;
+      margin: 0 5px;
       text-decoration: none;
-      font-weight: bold;
+      color: black;
+      background-color: white;
+      border-radius: 4px;
       cursor: pointer;
     }
-    #images {
-      margin-top: 20px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+    nav a:hover {
+      background-color: grey;
+      color: white;
     }
-    #images img {
-      margin: 10px;
-      max-width: 150px;
-      border-radius: 8px;
+    nav a.active {
+      background-color: blue;
+      color: white;
     }
   </style>
 </head>
 <body>
-  <!-- Homepage state -->
-  <div id="homeView" class="centered">
-    <input id="query" type="text" placeholder="Search here...">
-    <button onclick="goToResults()">Search</button>
-  </div>
+  <!-- Left Santa -->
+  <div class="half"></div>
+  <!-- Right Santa -->
+  <div class="half"></div>
 
-  <!-- Results state -->
-  <div id="resultsView">
+  <!-- Tabs overlay -->
+  <div class="content">
     <nav>
-      <a onclick="showTab('web')">Web</a>
-      <a onclick="showTab('images')">Images</a>
-      <a onclick="showTab('news')">News</a>
-      <a onclick="showTab('videos')">Videos</a>
+      <a href="#" class="active" onclick="setActive(this)">Web</a>
+      <a href="#" onclick="setActive(this)">Images</a>
+      <a href="#" onclick="setActive(this)">News</a>
+      <a href="#" onclick="setActive(this)">Videos</a>
     </nav>
-    <div id="web"><p>Web results will go here…</p></div>
-    <div id="images"></div>
-    <div id="news" style="display:none;"><p>News results will go here…</p></div>
-    <div id="videos" style="display:none;"><p>Video results will go here…</p></div>
   </div>
 
   <script>
-    function goToResults() {
-      document.getElementById('homeView').style.display = 'none';
-      document.getElementById('resultsView').style.display = 'block';
-      searchImages(); // default to images tab for now
-    }
-
-    function showTab(tab) {
-      document.getElementById('web').style.display = 'none';
-      document.getElementById('images').style.display = 'none';
-      document.getElementById('news').style.display = 'none';
-      document.getElementById('videos').style.display = 'none';
-      document.getElementById(tab).style.display = 'block';
-    }
-
-    async function searchImages() {
-      const query = document.getElementById('query').value;
-      const response = await fetch(`https://api.unsplash.com/search/photos?query=${query}&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
-      const data = await response.json();
-      const imagesDiv = document.getElementById('images');
-      imagesDiv.innerHTML = '';
-      data.results.forEach(photo => {
-        const img = document.createElement('img');
-        img.src = photo.urls.small;
-        imagesDiv.appendChild(img);
-      });
-      showTab('images');
+    function setActive(el) {
+      document.querySelectorAll('nav a').forEach(a => a.classList.remove('active'));
+      el.classList.add('active');
     }
   </script>
 </body>
