--- a/index.html
+++ b/index.html
@@ -7,31 +7,26 @@
     body {
       margin: 0;
       height: 100vh;
-      display: flex;
-    }
-    .half {
-      width: 50%;
-      height: 100vh;
       background: url('https://searchenginesearchmas.github.io/Searchmas/Santa.png')
-                  no-repeat center center;
+                  no-repeat center center fixed;
       background-size: cover;
-    }
-    .content {
-      position: absolute;
-      top: 20%;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
       font-family: Arial, sans-serif;
       color: white;
+      text-align: center;
+    }
+    .centered {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     h1 {
       font-size: 3em;
       margin-bottom: 30px;
     }
     input[type="text"] {
-      width: 400px;   /* standard width */
-      padding: 12px;  /* bigger padding */
+      width: 400px;
+      padding: 12px;
       font-size: 1.2em;
       border-radius: 5px;
       border: none;
@@ -46,8 +41,9 @@
       background-color: crimson;
       color: white;
     }
-    nav {
-      margin-top: 30px;
+    #resultsView {
+      display: none;
+      margin-top: 50px;
     }
     nav a {
       padding: 10px 20px;
@@ -66,31 +62,61 @@
       background-color: blue;
       color: white;
     }
+    #images {
+      margin-top: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    #images img {
+      margin: 10px;
+      max-width: 150px;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
-  <!-- Left Santa -->
-  <div class="half"></div>
-  <!-- Right Santa -->
-  <div class="half"></div>
-
-  <!-- Title + Search box + Tabs -->
-  <div class="content">
+  <!-- Homepage -->
+  <div id="homeView" class="centered">
     <h1>🌲Searchmas 🎅</h1>
     <input id="query" type="text" placeholder="Search here...">
-    <button onclick="setActive(document.querySelector('nav a'))">Search</button>
+    <button onclick="goToResults()">Search</button>
+  </div>
+
+  <!-- Results -->
+  <div id="resultsView">
     <nav>
       <a href="#" class="active" onclick="setActive(this)">Web</a>
       <a href="#" onclick="setActive(this)">Images</a>
       <a href="#" onclick="setActive(this)">News</a>
       <a href="#" onclick="setActive(this)">Videos</a>
     </nav>
+    <div id="images"></div>
   </div>
 
   <script>
+    function goToResults() {
+      document.getElementById('homeView').style.display = 'none';
+      document.getElementById('resultsView').style.display = 'block';
+      searchImages(); // default to images tab
+    }
+
     function setActive(el) {
       document.querySelectorAll('nav a').forEach(a => a.classList.remove('active'));
       el.classList.add('active');
+    }
+
+    async function searchImages() {
+      const query = document.getElementById('query').value;
+      const response = await fetch(`https://api.unsplash.com/search/photos?query=${query}&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
+      const data = await response.json();
+      const imagesDiv = document.getElementById('images');
+      imagesDiv.innerHTML = '';
+      data.results.forEach(photo => {
+        const img = document.createElement('img');
+        img.src = photo.urls.small;
+        imagesDiv.appendChild(img);
+      });
     }
   </script>
 </body>
