--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body { margin:0; font-family:sans-serif; background:#111; color:#eee; }
     .split { display:flex; height:100vh; }
-    .half { flex:1; background:url('santa.png') center/cover no-repeat; }
+    .half { flex:1; background:url('https://raw.githubusercontent.com/username/repo/branch/Santa.png') center/cover no-repeat; }
     .card { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
     h1 { margin:0 0 12px; text-align:center; }
     .searchbar { display:flex; gap:10px; margin-bottom:20px; }
@@ -31,7 +31,13 @@
     <div class="half"></div>
     <div class="half"></div>
     <div class="card">
-      <div id="home">
+      <div id="signin">
+        <h2>Sign In</h2>
+        <input id="username" type="text" placeholder="Username">
+        <input id="password" type="password" placeholder="Password">
+        <button id="loginBtn">Login</button>
+      </div>
+      <div id="home" style="display:none;">
         <h1>Childmas</h1>
         <div class="searchbar">
           <input id="query" type="text" placeholder="Search…" />
@@ -50,38 +56,35 @@
           <button id="tabVideos">Videos</button>
           <button id="tabNews">News</button>
           <button id="tabDiscuss">Discussions</button>
+          <button id="tabHistory">History</button>
         </div>
         <div id="resultsContent">Results will appear here…</div>
       </div>
     </div>
   </div>
   <script>
+    let currentUser=null;
     const home=document.getElementById('home');
+    const signin=document.getElementById('signin');
     const results=document.getElementById('results');
     const qInput=document.getElementById('query');
     const qTop=document.getElementById('queryTop');
     const content=document.getElementById('resultsContent');
+    document.getElementById('loginBtn').onclick=()=>{const user=document.getElementById('username').value.trim();const pass=document.getElementById('password').value.trim();if(user&&pass){currentUser=user;localStorage.setItem('childmasUser',user);signin.style.display='none';home.style.display='block';}};
     document.getElementById('searchBtn').onclick=()=>enterResults();
     document.getElementById('goBtn').onclick=()=>refreshActive();
     document.getElementById('backBtn').onclick=()=>{results.style.display='none';home.style.display='block';};
     qInput.addEventListener('keydown', e => { if(e.key==='Enter'){ e.preventDefault(); enterResults(); } });
     qTop.addEventListener('keydown', e => { if(e.key==='Enter'){ e.preventDefault(); refreshActive(); } });
     function getQuery(){ return (qTop.value.trim()||qInput.value.trim()); }
-    function setActive(tabId){ ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'].forEach(id => document.getElementById(id).classList.remove('active')); document.getElementById(tabId).classList.add('active'); }
-    function activeTabId(){ return ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'].find(id => document.getElementById(id).classList.contains('active')) || 'tabWeb'; }
-    function enterResults(){ const q=getQuery(); if(!q)return; home.style.display='none'; results.style.display='block'; qTop.value=q; showWeb(); }
-    function refreshActive(){ const id=activeTabId(); if(id==='tabWeb') showWeb(); else if(id==='tabImages') showImages(); else if(id==='tabVideos') showVideos(); else if(id==='tabNews') showNews(); else showDiscuss(); }
+    function setActive(tabId){ ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'].forEach(id => document.getElementById(id).classList.remove('active')); document.getElementById(tabId).classList.add('active'); }
+    function activeTabId(){ return ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'].find(id => document.getElementById(id).classList.contains('active')) || 'tabWeb'; }
+    function saveSearch(query){ if(!currentUser)return; let history=JSON.parse(localStorage.getItem(currentUser+'_history')||'[]'); history.push(query); localStorage.setItem(currentUser+'_history',JSON.stringify(history)); }
+    function enterResults(){ const q=getQuery(); if(!q)return; saveSearch(q); home.style.display='none'; results.style.display='block'; qTop.value=q; showWeb(); }
+    function refreshActive(){ const id=activeTabId(); if(id==='tabWeb') showWeb(); else if(id==='tabImages') showImages(); else if(id==='tabVideos') showVideos(); else if(id==='tabNews') showNews(); else if(id==='tabDiscuss') showDiscuss(); else showHistory(); }
     function item(label,url,favicon,desc){ return `<div class="item"><img class="favicon" src="${favicon}" alt=""><a href="${url}" target="_blank">${label}</a></div><div class="desc">${desc}</div>`; }
     function showWeb(){ const q=getQuery(); if(!q)return; setActive('tabWeb'); content.innerHTML= item('Google: '+q,'https://www.google.com/search?q='+encodeURIComponent(q),'https://www.google.com/favicon.ico','Search with Google')+ item('Bing: '+q,'https://www.bing.com/search?q='+encodeURIComponent(q),'https://www.bing.com/favicon.ico','Search with Bing')+ item('Gemini: '+q,'https://gemini.google.com/app/search?q='+encodeURIComponent(q),'gemini.png','Search with Gemini')+ item('ChatGPT: '+q,'https://chat.openai.com/?q='+encodeURIComponent(q),'https://chat.openai.com/favicon.ico','Search with ChatGPT'); }
     async function showImages(){ const q=getQuery(); if(!q)return; setActive('tabImages'); try { const res = await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`); const data = await res.json(); let grid='<div class="photo-grid">'; data.results.forEach(img=>{ grid += `<img src="${img.urls.small}" alt="${q}">`; }); grid+='</div>'; content.innerHTML=grid; } catch(err){ content.innerHTML='<p>Could not load images.</p>'; } }
     function showVideos(){ const q=getQuery(); if(!q)return; setActive('tabVideos'); content.innerHTML= item('YouTube: '+q,'https://www.youtube.com/results?search_query='+encodeURIComponent(q),'https://www.youtube.com/favicon.ico','Videos on YouTube')+ item('Bing Videos: '+q,'https://www.bing.com/videos/search?q='+encodeURIComponent(q),'https://www.bing.com/favicon.ico','Videos on Bing'); }
     function showNews(){ const q=getQuery(); if(!q)return; setActive('tabNews'); content.innerHTML= item('Google News: '+q,'https://news.google.com/search?q='+encodeURIComponent(q),'https://www.gstatic.com/images/branding/product/2x/news_96dp.png','News from Google')+ item('Bing News: '+q,'https://www.bing.com/news/search?q='+encodeURIComponent(q),'https://www.bing.com/favicon.ico','News from Bing'); }
-    function showDiscuss(){ const q=getQuery(); if(!q)return; setActive('tabDiscuss'); content.innerHTML= item('Reddit: '+q,'https://www.reddit.com/search/?q='+encodeURIComponent(q),'https://www.redditstatic.com/desktop2x/img/favicon/favicon-32x32.png','Discussions on Reddit')+ item('Quora: '+q,'https://www.quora.com/search?q='+encodeURIComponent(q),'https://www.quora.com/favicon.ico','Discussions on Quora'); }
-    document.getElementById('tabWeb').onclick=showWeb;
-    document.getElementById('tabImages').onclick=showImages;
-    document.getElementById('tabVideos').onclick=showVideos;
-    document.getElementById('tabNews').onclick=showNews;
-    document.getElementById('tabDiscuss').onclick=showDiscuss;
-  </script>
-</body>
-</html>
+    function showDiscuss(){ const q=getQuery(); if(!q)return; setActive('tabDiscuss'); content.innerHTML= item('Reddit: '+q,'https://www.reddit.com/search
