--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
   <title>Searchmas 🎅🎄</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { margin:0; font-family:sans-serif; color:#eee; }
-    .split { display:flex; height:100vh; }
-    .half { flex:1; background:url('https://raw.githubusercontent.com/username/repo/branch/Santa.png') center/cover no-repeat; }
+    body { margin:0; font-family:sans-serif; color:#fff; }
+    .split { display:flex; min-height:100vh; }
+    .half { flex:1; background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat; }
     .card { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
     h1 { margin:0 0 12px; text-align:center; font-size:2em; }
-    .searchbar { display:flex; gap:10px; margin-bottom:20px; }
-    .searchbar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444; background:#1b1b1b; color:#fff; }
-    .searchbar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8; color:#fff; cursor:pointer; }
-    .tabs { display:flex; gap:8px; flex-wrap:wrap; margin:20px 0; }
+    .bar { display:flex; gap:10px; margin-bottom:12px; }
+    .bar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444; background:#1b1b1b; color:#fff; }
+    .bar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8; color:#fff; cursor:pointer; }
+    .tabs { display:flex; gap:8px; flex-wrap:wrap; margin:12px 0; }
     .tabs button { padding:8px 12px; border-radius:6px; background:#333; color:#fff; border:none; cursor:pointer; }
     .tabs button.active { background:#ff5ca8; }
-    #resultsContent { margin-top:20px; }
-    .item { margin-bottom:14px; display:flex; align-items:center; gap:10px; }
-    .item img.favicon { width:32px; height:32px; }
+    #content { margin-top:16px; }
+    .item { margin-bottom:12px; display:flex; align-items:center; gap:10px; }
+    .item img { width:32px; height:32px; }
     .item a { color:#fff; text-decoration:none; font-weight:bold; }
     .item a:hover { text-decoration:underline; }
-    .desc { font-size:0.9em; color:#ccc; margin-left:42px; }
-    .photo-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(150px,1fr)); gap:10px; }
-    .photo-grid img { width:100%; height:120px; object-fit:cover; border-radius:8px; background:#222; }
+    .row { display:flex; gap:8px; flex-wrap:wrap; }
+    .row .pill { background:#222; padding:8px 12px; border-radius:999px; }
   </style>
 </head>
 <body>
@@ -31,70 +30,132 @@
     <div class="half"></div>
     <div class="half"></div>
     <div class="card">
-      <div id="usernameSection">
-        <h2>Enter Username 🎅🎄</h2>
-        <input id="username" type="text" placeholder="Your name">
-        <button id="setUserBtn">Continue</button>
+      <h1>Searchmas 🎅🎄</h1>
+
+      <div class="bar">
+        <input id="username" type="text" placeholder="Username">
+        <button id="setUser">Set</button>
       </div>
-      <div id="home" style="display:none;">
-        <h1>Searchmas 🎅🎄</h1>
-        <div class="searchbar">
-          <input id="query" type="text" placeholder="Search…" />
-          <button id="searchBtn">Search</button>
-        </div>
+
+      <div class="bar">
+        <input id="q" type="text" placeholder="Search…">
+        <button id="go">Search</button>
       </div>
-      <div id="results" style="display:none;">
-        <div class="searchbar">
-          <input id="queryTop" type="text" />
-          <button id="goBtn">Go</button>
-          <button id="backBtn">Back</button>
-        </div>
-        <div class="tabs">
-          <button id="tabWeb" class="active">Websites</button>
-          <button id="tabImages">Images</button>
-          <button id="tabVideos">Videos</button>
-          <button id="tabNews">News</button>
-          <button id="tabDiscuss">Discussions</button>
-          <button id="tabHistory">History</button>
-        </div>
-        <div id="resultsContent">Results will appear here…</div>
+
+      <div class="tabs">
+        <button id="tabWeb" class="active">Web</button>
+        <button id="tabImages">Images</button>
+        <button id="tabVideos">Videos</button>
+        <button id="tabNews">News</button>
+        <button id="tabDiscuss">Discuss</button>
+        <button id="tabHistory">History</button>
       </div>
+
+      <div id="content"></div>
     </div>
   </div>
+
   <script>
-    let currentUser=null;
-    const home=document.getElementById('home');
-    const usernameSection=document.getElementById('usernameSection');
-    const results=document.getElementById('results');
-    const qInput=document.getElementById('query');
-    const qTop=document.getElementById('queryTop');
-    const content=document.getElementById('resultsContent');
+    const usernameEl = document.getElementById('username');
+    const setUserBtn = document.getElementById('setUser');
+    const qEl = document.getElementById('q');
+    const goBtn = document.getElementById('go');
+    const content = document.getElementById('content');
+    const tabs = ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'];
+    let currentUser = localStorage.getItem('searchmasUsername') || '';
 
-    document.getElementById('setUserBtn').onclick=()=>{
-      const user=document.getElementById('username').value.trim();
-      if(user){
-        currentUser=user;
-        localStorage.setItem('searchmasUser',user);
-        usernameSection.style.display='none';
-        home.style.display='block';
-      }
-    };
+    if (currentUser) usernameEl.value = currentUser;
 
-    document.getElementById('searchBtn').onclick=()=>enterResults();
-    document.getElementById('goBtn').onclick=()=>refreshActive();
-    document.getElementById('backBtn').onclick=()=>{results.style.display='none';home.style.display='block';};
+    function setActive(id){
+      tabs.forEach(t => document.getElementById(t).classList.remove('active'));
+      document.getElementById(id).classList.add('active');
+    }
 
-    qInput.addEventListener('keydown', e => { if(e.key==='Enter'){ e.preventDefault(); enterResults(); } });
-    qTop.addEventListener('keydown', e => { if(e.key==='Enter'){ e.preventDefault(); refreshActive(); } });
+    function getQuery(){ return (qEl.value || '').trim(); }
 
-    function getQuery(){ return (qTop.value.trim()||qInput.value.trim()); }
-    function setActive(tabId){ ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'].forEach(id => document.getElementById(id).classList.remove('active')); document.getElementById(tabId).classList.add('active'); }
-    function activeTabId(){ return ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'].find(id => document.getElementById(id).classList.contains('active')) || 'tabWeb'; }
-    function saveSearch(query){ if(!currentUser)return; let history=JSON.parse(localStorage.getItem(currentUser+'_history')||'[]'); history.push(query); localStorage.setItem(currentUser+'_history',JSON.stringify(history)); }
-    function enterResults(){ const q=getQuery(); if(!q)return; saveSearch(q); home.style.display='none'; results.style.display='block'; qTop.value=q; showWeb(); }
-    function refreshActive(){ const id=activeTabId(); if(id==='tabWeb') showWeb(); else if(id==='tabImages') showImages(); else if(id==='tabVideos') showVideos(); else if(id==='tabNews') showNews(); else if(id==='tabDiscuss') showDiscuss(); else showHistory(); }
-    function item(label,url,favicon,desc){ return `<div class="item"><img class="favicon" src="${favicon}" alt=""><a href="${url}" target="_blank">${label}</a></div><div class="desc">${desc}</div>`; }
-    function showWeb(){ const q=getQuery(); if(!q)return; setActive('tabWeb'); content.innerHTML= item('Google: '+q,'https://www.google.com/search?q='+encodeURIComponent(q),'https://www.google.com/favicon.ico','Search with Google')+ item('Bing: '+q,'https://www.bing.com/search?q='+encodeURIComponent(q),'https://www.bing.com/favicon.ico','Search with Bing')+ item('Gemini: '+q,'https://gemini.google.com/app/search?q='+encodeURIComponent(q),'gemini.png','Search with Gemini')+ item('ChatGPT: '+q,'https://chat.openai.com/?q='+encodeURIComponent(q),'https://chat.openai.com/favicon.ico','Search with ChatGPT'); }
-    async function showImages(){ const q=getQuery(); if(!q)return; setActive('tabImages'); try { const res = await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`); const data = await res.json(); let grid='<div class="photo-grid">'; data.results.forEach(img=>{ grid += `<img src="${img.urls.small}" alt="${q}">`; }); grid+='</div>'; content.innerHTML=grid; } catch(err){ content.innerHTML='<p>Could not load images.</p>'; } }
-    function showVideos(){ const q=getQuery(); if(!q)return; setActive('tabVideos'); content.innerHTML= item('YouTube: '+q,'https://www.youtube.com/results?search_query='+encodeURIComponent(q),'https://www.youtube.com/favicon.ico','Videos on YouTube')+ item('Bing Videos: '+q,'https://www.bing.com/videos/search?q='+encodeURIComponent(q),'https://www.bing.com/favicon.ico','Videos on Bing'); }
-    function showNews(){ const q=getQuery(); if(!q)return; setActive('tabNews'); content.innerHTML= item('Google News: '+q,'https://news.google.com/search?q='+encodeURIComponent(q),'https://www.gstatic.com/images/branding/product/2x/news_96dp.png','News from Google')+ item('Bing News: '+q,'https://www.bing.com/news/search?q='+encodeURIComponent(q),'
+    function ensureUser(){
+      const name = (usernameEl.value || '').trim();
+      if(!name){ content.innerHTML = 'Enter a username to save history.'; return false; }
+      currentUser = name;
+      localStorage.setItem('searchmasUsername', name);
+      return true;
+    }
+
+    function saveSearch(q){
+      if(!currentUser) return;
+      const key = currentUser + '_history';
+      const hist = JSON.parse(localStorage.getItem(key) || '[]');
+      hist.unshift({ q, ts: new Date().toISOString() });
+      localStorage.setItem(key, JSON.stringify(hist.slice(0,200)));
+    }
+
+    function faviconFor(url){
+      try { return 'https://www.google.com/s2/favicons?domain=' + encodeURIComponent(new URL(url).hostname); }
+      catch { return 'https://www.google.com/favicon.ico'; }
+    }
+
+    function item(label,url){
+      return `<div class="item"><img src="${faviconFor(url)}" alt=""><a href="${url}" target="_blank">${label}</a></div>`;
+    }
+
+    function showWeb(){
+      const q = getQuery(); if(!q){ content.innerHTML = 'Type a query.'; return; }
+      setActive('tabWeb'); saveSearch(q);
+      content.innerHTML =
+        item('Google: '+q, 'https://www.google.com/search?q='+encodeURIComponent(q)) +
+        item('Bing: '+q, 'https://www.bing.com/search?q='+encodeURIComponent(q)) +
+        item('DuckDuckGo: '+q, 'https://duckduckgo.com/?q='+encodeURIComponent(q)) +
+        item('Wikipedia: '+q, 'https://en.wikipedia.org/wiki/Special:Search?search='+encodeURIComponent(q));
+    }
+
+    function showImages(){
+      const q = getQuery(); if(!q){ content.innerHTML = 'Type a query.'; return; }
+      setActive('tabImages'); saveSearch(q);
+      content.innerHTML =
+        item('Google Images: '+q, 'https://www.google.com/search?tbm=isch&q='+encodeURIComponent(q)) +
+        item('Bing Images: '+q, 'https://www.bing.com/images/search?q='+encodeURIComponent(q)) +
+        item('Yandex Images: '+q, 'https://yandex.com/images/search?text='+encodeURIComponent(q));
+    }
+
+    function showVideos(){
+      const q = getQuery(); if(!q){ content.innerHTML = 'Type a query.'; return; }
+      setActive('tabVideos'); saveSearch(q);
+      content.innerHTML =
+        item('YouTube: '+q, 'https://www.youtube.com/results?search_query='+encodeURIComponent(q)) +
+        item('Bing Videos: '+q, 'https://www.bing.com/videos/search?q='+encodeURIComponent(q)) +
+        item('Vimeo: '+q, 'https://vimeo.com/search?q='+encodeURIComponent(q));
+    }
+
+    function showNews(){
+      const q = getQuery(); if(!q){ content.innerHTML = 'Type a query.'; return; }
+      setActive('tabNews'); saveSearch(q);
+      content.innerHTML =
+        `<div class="item"><img src="https://www.gstatic.com/images/branding/product/2x/news_96dp.png" alt=""><a href="https://news.google.com/search?q=${encodeURIComponent(q)}" target="_blank">Google News: ${q}</a></div>` +
+        item('Bing News: '+q, 'https://www.bing.com/news/search?q='+encodeURIComponent(q)) +
+        item('Reuters: '+q, 'https://www.reuters.com/search/news?blob='+encodeURIComponent(q));
+    }
+
+    function showDiscuss(){
+      const q = getQuery(); if(!q){ content.innerHTML = 'Type a query.'; return; }
+      setActive('tabDiscuss'); saveSearch(q);
+      content.innerHTML =
+        item('Reddit: '+q, 'https://www.reddit.com/search/?q='+encodeURIComponent(q)) +
+        item('Quora: '+q, 'https://www.quora.com/search?q='+encodeURIComponent(q)) +
+        item('Stack Overflow: '+q, 'https://stackoverflow.com/search?q='+encodeURIComponent(q));
+    }
+
+    function showHistory(){
+      if(!ensureUser()) return;
+      setActive('tabHistory');
+      const key = currentUser + '_history';
+      const hist = JSON.parse(localStorage.getItem(key) || '[]');
+      if(hist.length===0){ content.innerHTML = 'No history yet.'; return; }
+      content.innerHTML = '<div class="row">' + hist.slice(0,50).map(h => `<span class="pill">${h.q}</span>`).join('') + '</div>';
+    }
+
+    setUserBtn.onclick = ensureUser;
+    goBtn.onclick = showWeb;
+    qEl.addEventListener('keydown', e => { if(e.key==='Enter') showWeb(); });
+    document.getElementById('tabWeb').onclick = showWeb;
+    document.getElementById('tabImages').onclick = showImages;
+    document.get
