--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     .item a:hover { text-decoration:underline; }
     .photo-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(150px,1fr)); gap:10px; }
     .photo-grid img { width:100%; height:120px; object-fit:cover; border-radius:8px; background:#222; }
-    .history-list { margin-top:10px; }
     .history-list span { display:inline-block; background:#222; padding:6px 10px; border-radius:999px; margin:4px; }
   </style>
 </head>
@@ -39,7 +38,7 @@
         <div class="header">
           <h1>Searchmas 🎅🎄</h1>
           <div class="profile-btn" id="profileBtn">
-            <img src="https://i.imgur.com/1X1Z1Z1.png" alt="Profile">
+            <img src="https://upload.wikimedia.org/wikipedia/en/7/70/Windows_7_flower_avatar.png" alt="Profile">
             <span>History</span>
           </div>
         </div>
@@ -66,7 +65,7 @@
       </div>
       <div id="historyView" style="display:none;">
         <h2>Your Search History</h2>
-        <div class="history-list" id="historyList"></div>
+        <div id="historyList"></div>
         <button id="closeHistory">Close</button>
       </div>
     </div>
@@ -96,21 +95,53 @@
     document.getElementById('closeHistory').onclick=()=>{historyView.style.display='none';home.style.display='block';};
 
     document.getElementById('go').onclick=()=>enterResults();
-    document.getElementById('goTop').onclick=()=>refreshActive();
-    document.getElementById('back').onclick=()=>{results.style.display='none';home.style.display='block';};
     q.addEventListener('keydown',e=>{if(e.key==='Enter'){enterResults();}});
+    document.getElementById('goTop').onclick=()=>refreshActive();
     qTop.addEventListener('keydown',e=>{if(e.key==='Enter'){refreshActive();}});
+    document.getElementById('back').onclick=()=>{results.style.display='none';home.style.display='block';};
 
     function getQuery(){return (qTop.value.trim()||q.value.trim());}
     function setActive(id){['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'].forEach(t=>document.getElementById(t).classList.remove('active'));document.getElementById(id).classList.add('active');}
     function activeTab(){return ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'].find(t=>document.getElementById(t).classList.contains('active'))||'tabWeb';}
 
-    function enterResults(){const query=getQuery();if(!query)return;saveSearch(query);home.style.display='none';historyView.style.display='none';results.style.display='block';qTop.value=query;showWeb();}
-    function refreshActive(){const id=activeTab();if(id==='tabWeb')showWeb();else if(id==='tabImages')showImages();else if(id==='tabVideos')showVideos();else if(id==='tabNews')showNews();else if(id==='tabDiscuss')showDiscuss();else showHistoryTab();}
+    function enterResults(){
+      const query=getQuery();
+      if(!query){alert("Type something to search");return;}
+      saveSearch(query);
+      home.style.display='none';
+      historyView.style.display='none';
+      results.style.display='block';
+      qTop.value=query;
+      showWeb();
+    }
+
+    function refreshActive(){
+      const id=activeTab();
+      if(id==='tabWeb')showWeb();
+      else if(id==='tabImages')showImages();
+      else if(id==='tabVideos')showVideos();
+      else if(id==='tabNews')showNews();
+      else if(id==='tabDiscuss')showDiscuss();
+      else showHistoryTab();
+    }
 
     function favicon(url){try{return 'https://www.google.com/s2/favicons?domain='+new URL(url).hostname;}catch{return 'https://www.google.com/favicon.ico';}}
     function item(label,url){return `<div class="item"><img src="${favicon(url)}"><a href="${url}" target="_blank">${label}</a></div>`;}
 
-    function showWeb(){const q=getQuery();if(!q)return;setActive('tabWeb');content.innerHTML=item('Google: '+q,'https://www.google.com/search?q='+encodeURIComponent(q))+item('Wikipedia: '+q,'https://en.wikipedia.org/wiki/Special:Search?search='+encodeURIComponent(q))+`<div class="item"><img src="https://chat.openai.com/favicon.ico"><a href="https://chat.openai.com/?q=${encodeURIComponent(q)}" target="_blank">ChatGPT: ${q}</a></div>`+`<div class="item"><img src="https://www.gstatic.com/lamda/images/gemini_symbol.png"><a href="https://gemini.google.com/app/search?q=${encodeURIComponent(q)}" target="_blank">Gemini: ${q}</a></div>`;}
+    function showWeb(){
+      const q=getQuery();
+      if(!q)return;
+      setActive('tabWeb');
+      content.innerHTML=
+        item('Google: '+q,'https://www.google.com/search?q='+encodeURIComponent(q))+
+        item('Wikipedia: '+q,'https://en.wikipedia.org/wiki/Special:Search?search='+encodeURIComponent(q))+
+        `<div class="item"><img src="https://chat.openai.com/favicon.ico"><a href="https://chat.openai.com/?q=${encodeURIComponent(q)}" target="_blank">ChatGPT: ${q}</a></div>`+
+        `<div class="item"><img src="https://www.gstatic.com/lamda/images/gemini_symbol.png"><a href="https://gemini.google.com/app/search?q=${encodeURIComponent(q)}" target="_blank">Gemini: ${q}</a></div>`;
+    }
 
-    async function showImages(){const q=getQuery();if(!q)return;setActive('tabImages');try{const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);const data=await res
+    async function showImages(){
+      const q=getQuery();
+      if(!q)return;
+      setActive('tabImages');
+      try{
+        const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9z
