--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     .card { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
     h1 { margin:0; text-align:center; font-size:2em; }
     .header { display:flex; justify-content:space-between; align-items:center; margin-bottom:16px; }
-    .profile-btn { display:flex; align-items:center; gap:8px; cursor:pointer; }
-    .profile-btn img { width:32px; height:32px; border-radius:50%; }
+    .profile-btn img { width:32px; height:32px; border-radius:50%; cursor:pointer; }
     .bar { display:flex; gap:10px; margin-bottom:12px; }
     .bar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444; background:#1b1b1b; color:#fff; }
     .bar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8; color:#fff; cursor:pointer; }
@@ -26,7 +25,6 @@
     .item a:hover { text-decoration:underline; }
     .photo-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(150px,1fr)); gap:10px; }
     .photo-grid img { width:100%; height:120px; object-fit:cover; border-radius:8px; background:#222; }
-    .history-list span { display:inline-block; background:#222; padding:6px 10px; border-radius:999px; margin:4px; }
   </style>
 </head>
 <body>
@@ -37,9 +35,8 @@
       <div id="home">
         <div class="header">
           <h1>Searchmas 🎅🎄</h1>
-          <div class="profile-btn" id="profileBtn">
+          <div class="profile-btn">
             <img src="https://upload.wikimedia.org/wikipedia/en/7/70/Windows_7_flower_avatar.png" alt="Profile">
-            <span>History</span>
           </div>
         </div>
         <div class="bar">
@@ -59,40 +56,17 @@
           <button id="tabVideos">Videos</button>
           <button id="tabNews">News</button>
           <button id="tabDiscuss">Discuss</button>
-          <button id="tabHistory">History</button>
         </div>
         <div id="content"></div>
-      </div>
-      <div id="historyView" style="display:none;">
-        <h2>Your Search History</h2>
-        <div id="historyList"></div>
-        <button id="closeHistory">Close</button>
       </div>
     </div>
   </div>
   <script>
     const home=document.getElementById('home');
     const results=document.getElementById('results');
-    const historyView=document.getElementById('historyView');
     const q=document.getElementById('q');
     const qTop=document.getElementById('qTop');
     const content=document.getElementById('content');
-    const historyList=document.getElementById('historyList');
-    let history=JSON.parse(localStorage.getItem('searchmasHistory')||'[]');
-
-    function saveSearch(query){
-      history.unshift(query);
-      localStorage.setItem('searchmasHistory',JSON.stringify(history.slice(0,100)));
-    }
-
-    function showHistory(){
-      historyList.innerHTML='';
-      if(history.length===0){historyList.innerHTML='No history yet.';return;}
-      history.forEach(h=>{const span=document.createElement('span');span.textContent=h;historyList.appendChild(span);});
-    }
-
-    document.getElementById('profileBtn').onclick=()=>{home.style.display='none';results.style.display='none';historyView.style.display='block';showHistory();};
-    document.getElementById('closeHistory').onclick=()=>{historyView.style.display='none';home.style.display='block';};
 
     document.getElementById('go').onclick=()=>enterResults();
     q.addEventListener('keydown',e=>{if(e.key==='Enter'){enterResults();}});
@@ -101,15 +75,13 @@
     document.getElementById('back').onclick=()=>{results.style.display='none';home.style.display='block';};
 
     function getQuery(){return (qTop.value.trim()||q.value.trim());}
-    function setActive(id){['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'].forEach(t=>document.getElementById(t).classList.remove('active'));document.getElementById(id).classList.add('active');}
-    function activeTab(){return ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'].find(t=>document.getElementById(t).classList.contains('active'))||'tabWeb';}
+    function setActive(id){['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'].forEach(t=>document.getElementById(t).classList.remove('active'));document.getElementById(id).classList.add('active');}
+    function activeTab(){return ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'].find(t=>document.getElementById(t).classList.contains('active'))||'tabWeb';}
 
     function enterResults(){
       const query=getQuery();
       if(!query){alert("Type something to search");return;}
-      saveSearch(query);
       home.style.display='none';
-      historyView.style.display='none';
       results.style.display='block';
       qTop.value=query;
       showWeb();
@@ -122,7 +94,6 @@
       else if(id==='tabVideos')showVideos();
       else if(id==='tabNews')showNews();
       else if(id==='tabDiscuss')showDiscuss();
-      else showHistoryTab();
     }
 
     function favicon(url){try{return 'https://www.google.com/s2/favicons?domain='+new URL(url).hostname;}catch{return 'https://www.google.com/favicon.ico';}}
@@ -144,4 +115,42 @@
       if(!q)return;
       setActive('tabImages');
       try{
-        const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9z
+        const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
+        const data=await res.json();
+        let grid='<div class="photo-grid">';
+        data.results.forEach(img=>{grid+=`<img src="${img.urls.small}" alt="${q}">`;});
+        grid+='</div>';
+        content.innerHTML=grid;
+      }catch(err){content.innerHTML='<p>Could not load images.</p>';}
+    }
+
+    function showVideos(){
+      const q=getQuery();
+      if(!q)return;
+      setActive('tabVideos');
+      content.innerHTML=
+        item('YouTube: '+q,'https://www.youtube.com/results?search_query='+encodeURIComponent(q))+
+        item('Vimeo: '+q,'https://vimeo.com/search?q='+encodeURIComponent(q));
+    }
+
+    function showNews(){
+      const q=getQuery();
+      if(!q)return;
+      setActive('tabNews');
+      content.innerHTML=
+        `<div class="item"><img src="https://www.gstatic.com/images/branding/product/2x/news_96dp.png"><a href="https://news.google.com/search?q=${encodeURIComponent(q)}" target="_blank">Google News: ${q}</a></div>`+
+        item('Reuters: '+q,'https://www.reuters.com/search/news?blob='+encodeURIComponent(q));
+    }
+
+    function showDiscuss(){
+      const q=getQuery();
+      if(!q)return;
+      setActive('tabDiscuss');
+      content.innerHTML=
+        item('Reddit: '+q,'https://www.reddit.com/search/?q='+encodeURIComponent(q))+
+        item('Quora: '+q,'https://www.quora.com/search?q='+encodeURIComponent(q))+
+        item('Stack Overflow: '+q,'https://stackoverflow.com/search?q='+encodeURIComponent(q));
+    }
+  </script>
+</body>
+</html>
