--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     .tabs button.active { background:#ff5ca8; }
     #content { margin-top:16px; }
     .item { margin-bottom:12px; display:flex; align-items:center; gap:10px; }
-    .item img { width:24px; height:24px; }
+    .item img { width:24px; height:24px; object-fit:contain; }
     .item a { color:#fff; text-decoration:none; font-weight:bold; }
     .item a:hover { text-decoration:underline; }
     .photo-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(150px,1fr)); gap:10px; }
