--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <style>
     body { margin:0; font-family:sans-serif; color:#fff; }
     .split { display:flex; min-height:100vh; }
-    .half { flex:1; }
+    .half { flex:1; height:100vh; }
     .left { background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat; }
-    .right { background:#111; display:flex; align-items:center; justify-content:center; }
+    .right { background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat;
+             display:flex; align-items:center; justify-content:center; }
     .card { width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
     h1 { margin:0 0 16px; text-align:center; font-size:2em; }
     .bar { display:flex; gap:10px; margin-bottom:12px; }
