--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     .left { background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat; }
     .right { background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat;
              display:flex; align-items:center; justify-content:center; }
-    .card { width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
+    .card { width:min(600px,90%); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px;
+            display:flex; flex-direction:column; align-items:center; justify-content:center; }
     h1 { margin:0 0 16px; text-align:center; font-size:2em; }
-    .bar { display:flex; gap:10px; margin-bottom:12px; }
+    .bar { display:flex; gap:10px; margin-bottom:12px; width:100%; }
     .bar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444;
       background:#1b1b1b; color:#fff; }
     .bar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8;
@@ -22,7 +23,7 @@
     .tabs button { padding:8px 12px; border-radius:6px; background:#333; color:#fff;
       border:none; cursor:pointer; }
     .tabs button.active { background:#ff5ca8; }
-    #content { margin-top:16px; }
+    #content { margin-top:16px; width:100%; }
     .item { margin-bottom:12px; display:flex; align-items:center; gap:10px; }
     .item img { width:24px; height:24px; object-fit:contain; }
     .item a { color:#fff; text-decoration:none; font-weight:bold; }
@@ -157,9 +158,4 @@
       setActive('tabDiscuss');
       content.innerHTML=
         item('Reddit: '+query,'https://www.reddit.com/search/?q='+encodeURIComponent(query))+
-        item('Quora: '+query,'https://www.quora.com/search?q='+encodeURIComponent(query));
-    }
-  </script>
-</body>
-</html>
-
+        item('Quora: '+query,'https://www.quora.com
